Add the swaggo comments on GET /nodes/{id}
